Thu Apr 26 13:54:51 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-style.el: new file.  C/C++ style for ruby source code.

Wed Apr 25 19:49:16 2007  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (unix_send_io, unix_recv_io): use CMSG_DATA to
	  align file descriptor appropriately.

Tue Apr 24 09:33:57 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat, do_lstat, do_opendir): should not warn ENOTDIR.
	  [ruby-talk:248288]

Mon Apr 23 22:14:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb ($ruby): add extout directory to include path.
	  [ruby-core:11003]

	* lib/mkmf.rb (libpathflag): not to append RPATHFLAG to current
	  directory.

	* lib/mkmf.rb (init_mkmf): add current directory to default
	  library path with highest priority.  [ruby-core:10960]

	* lib/mkmf.rb (LINK_SO): LIBPATH to be placed before DLDFLAGS.

Fri Apr 20 16:05:22 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBPATHFLAG, RPATHFLAG): no needs to be quoted,
	  it is done by libpathflag in mkmf.rb.

Fri Apr 20 12:27:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: fix to override conv proc.

Fri Apr 20 12:17:05 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): inversed the order of errinfos.

Thu Apr 19 14:53:32 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/monitor.rb (ConditionVariable#wait, mon_enter, mon_exit_for_cond):
	  ensures Thread.critical to be false.  [ruby-talk:248300]

Wed Apr 18 10:41:21 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_strtod): exponent is radix 10.  [ruby-talk:248272]

Wed Apr 18 02:30:24 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LDFLAGS): prepend -L. instead appending it to
	  XLDFLAGS.  [ruby-core:10933]

	* configure.in (Makefile): remove $U for automake from MISSING.
	  [ruby-talk:248171]

Tue Apr 17 16:46:46 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
